--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Abeidskrav 1</title>
 </head>
 <body>
-    <section class="innhold">
+    <section class="container">
     <header>
         <nav>
              <ul id="knp-section">
@@ -33,6 +33,11 @@
         
        
     </section>
+
+
+    <nav>
+ 
+</nav> 
     </main>
 </section>
 </body>
