--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Assets/css/style.css">
     <title>Abeidskrav 1</title>
 </head>
@@ -11,11 +14,6 @@
     <header>
         <nav>
              <ul id="knp-section">
-                <!-- <li onclick="knp_coler()"><a href="#" id="knp-col">HTML</a></li>
-                <li><a href="#" id="knp-col">CSS</a></li>
-                <li><a href="#" id="knp-col">Javascript</a></li>
-                <li><a href="#" id="knp-col">React</a></li>
-                <li><a href="#" id="knp-col">Sanity</a></li> -->
             </ul>
          </nav>
     </header>
